<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#234681"
    tools:context=".MainActivity" >

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout"
        android:layout_width="320dp"
        android:layout_height="571dp"
        android:layout_marginTop="20dp"
        android:background="#FFBC36"
        app:layout_constraintEnd_toEndOf="@+id/textView"
        app:layout_constraintStart_toStartOf="@+id/textView"
        app:layout_constraintTop_toBottomOf="@+id/textView">

        <TextView
            android:id="@+id/textViewApellidosNombres"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="14dp"
            android:text="@string/textview_apenom"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/plainTextApeNom"
            android:layout_width="260dp"
            android:layout_height="34dp"
            android:ems="10"
            android:inputType="textPersonName"
            android:text="@string/plaintext_apenom"
            android:textSize="14sp"
            app:layout_constraintStart_toStartOf="@+id/textViewApellidosNombres"
            app:layout_constraintTop_toBottomOf="@+id/textViewApellidosNombres" />

        <TextView
            android:id="@+id/textViewCorreo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/textviewCorreo"
            app:layout_constraintStart_toStartOf="@+id/plainTextApeNom"
            app:layout_constraintTop_toBottomOf="@+id/plainTextApeNom" />

        <TextView
            android:id="@+id/textViewClave"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="7dp"
            android:text="@string/textviewClave"
            app:layout_constraintStart_toStartOf="@+id/plainTextCorreo"
            app:layout_constraintTop_toBottomOf="@+id/plainTextCorreo" />

        <TextView
            android:id="@+id/textViewFechaNacimiento"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="7dp"
            android:text="@string/textviewFechaNac"
            app:layout_constraintStart_toStartOf="@+id/plainTextClave"
            app:layout_constraintTop_toBottomOf="@+id/plainTextClave" />

        <TextView
            android:id="@+id/textViewCarrera"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="7dp"
            android:text="@string/textviewCarrera"
            app:layout_constraintStart_toStartOf="@+id/dateFechaNacimiento"
            app:layout_constraintTop_toBottomOf="@+id/dateFechaNacimiento" />

        <TextView
            android:id="@+id/textView7"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="7dp"
            android:text="¿Por qué medio se enteró de la convocatoria?"
            app:layout_constraintStart_toStartOf="@+id/radioGroupCarreras"
            app:layout_constraintTop_toBottomOf="@+id/radioGroupCarreras" />

        <EditText
            android:id="@+id/plainTextCorreo"
            android:layout_width="260dp"
            android:layout_height="34dp"
            android:ems="10"
            android:inputType="textEmailAddress"
            android:text="@string/emailCorreo"
            android:textSize="14sp"
            app:layout_constraintStart_toStartOf="@+id/textViewCorreo"
            app:layout_constraintTop_toBottomOf="@+id/textViewCorreo" />

        <EditText
            android:id="@+id/plainTextClave"
            android:layout_width="260dp"
            android:layout_height="34dp"
            android:ems="10"
            android:inputType="textPassword"
            android:text="@string/passwordClave"
            android:textSize="14sp"
            app:layout_constraintStart_toStartOf="@+id/textViewClave"
            app:layout_constraintTop_toBottomOf="@+id/textViewClave" />

        <EditText
            android:id="@+id/dateFechaNacimiento"
            android:layout_width="260dp"
            android:layout_height="34dp"
            android:ems="10"
            android:inputType="date"
            android:text="@string/dateFecha"
            android:textSize="14sp"
            app:layout_constraintStart_toStartOf="@+id/textViewFechaNacimiento"
            app:layout_constraintTop_toBottomOf="@+id/textViewFechaNacimiento" />

        <RadioGroup
            android:id="@+id/radioGroupCarreras"
            android:layout_width="259dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:orientation="vertical"
            app:layout_constraintStart_toStartOf="@+id/textViewCarrera"
            app:layout_constraintTop_toBottomOf="@+id/textViewCarrera">

            <RadioButton
                android:id="@+id/radioButtonIngSistemas"
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:text="@string/radioButtonSistemas"
                android:textSize="12sp" />

            <RadioButton
                android:id="@+id/radioButtonIngAmbiental"
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:text="@string/radioButtonAmbiental"
                android:textSize="12sp" />

            <RadioButton
                android:id="@+id/radioButtonIngMecanica"
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:text="@string/radioButtonMecanica"
                android:textSize="12sp" />

            <RadioButton
                android:id="@+id/radioButtonAdmi"
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:text="@string/radioButtonAdministracion"
                android:textSize="12sp" />
        </RadioGroup>

        <CheckBox
            android:id="@+id/checkBoxRadio"
            android:layout_width="wrap_content"
            android:layout_height="30dp"
            android:layout_marginTop="5dp"
            android:text="@string/checkboxRadio"
            android:textSize="12sp"
            app:layout_constraintStart_toStartOf="@+id/textView7"
            app:layout_constraintTop_toBottomOf="@+id/textView7" />

        <CheckBox
            android:id="@+id/checkBoxInternet"
            android:layout_width="wrap_content"
            android:layout_height="30dp"
            android:text="@string/checkboxInternet"
            android:textSize="12sp"
            app:layout_constraintStart_toStartOf="@+id/checkBoxRadio"
            app:layout_constraintTop_toBottomOf="@+id/checkBoxRadio" />

        <CheckBox
            android:id="@+id/checkBoxAmigo"
            android:layout_width="wrap_content"
            android:layout_height="30dp"
            android:text="@string/checkboxAmigo"
            android:textSize="12sp"
            app:layout_constraintStart_toStartOf="@+id/checkBoxInternet"
            app:layout_constraintTop_toBottomOf="@+id/checkBoxInternet" />

        <CheckBox
            android:id="@+id/checkBoxPublicidad"
            android:layout_width="wrap_content"
            android:layout_height="30dp"
            android:text="@string/checkboxPublicidad"
            android:textSize="12sp"
            app:layout_constraintStart_toStartOf="@+id/checkBoxAmigo"
            app:layout_constraintTop_toBottomOf="@+id/checkBoxAmigo" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="101dp"
        android:layout_marginTop="14dp"
        android:layout_marginEnd="100dp"
        android:text="EXAMEN DE ADMISIÓN UNTELS 2024"
        android:textColor="#FFFFFF"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/buttonEnviar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="159dp"
        android:layout_marginTop="14dp"
        android:layout_marginEnd="158dp"
        android:backgroundTint="#FFFFFF"
        android:drawableLeft="@drawable/baseline_send_24"
        android:text="@string/buttonEnviar"
        android:textColor="#000000"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/constraintLayout" />
</androidx.constraintlayout.widget.ConstraintLayout>